--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "react-scroll-to-top": "^1.0.8",
+    "react-scrolltop-button": "^0.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
